<resources>
    <string name="app_name">Confroid</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="submission">Saving...</string>
    <string name="done">Done</string>
    <string name="submit_error">An error occured during saving</string>
    <string name="created_on">Created on</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="saved_successfully">File exported successfully</string>
    <string name="file_not_saved">An error occured during export</string>
    <string name="logo">Logo</string>
    <string name="import_error">An error occured during import</string>
    <string name="read_error">Failed to read file</string>
    <string name="write_error">Failed to save file</string>
    <string name="button_import_device">Import from Device</string>
    <string name="button_import_server">Import from Server</string>
    <string name="button_export_device">Export from Device</string>
    <string name="button_export_server">Export from Server</string>
    <string name="attention">Attention!</string>
    <string name="editMessage">Be careful, do not edit the JSON format.</string>
    <string name="username">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="connect" translatable="false">Connect</string>
</resources>