<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit_item"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/back_item"
        android:checkable="false"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_arrow_back_ios_24"
        android:title="@string/back"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save_item"
        android:checkable="false"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>