<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".web.LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_login"
            app:layout_constraintBottom_toTopOf="@+id/register_page_button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/password" android:layout_marginBottom="140dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/username_login" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/username" android:layout_marginTop="148dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/login_button"
            app:layout_constraintBottom_toBottomOf="@+id/register_page_button"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toEndOf="@+id/password_login"/>
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/register_page_button"
            app:layout_constraintStart_toStartOf="@+id/password_login"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="288dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>